# substrate-contract

./: README.md
ink-contracts/rand_extension/: .gitignore  lib.rs
node-template/: .gitignore
node-template/node/: Cargo.toml
node-template/node/src/: chain_spec.rs
node-template/pallets/poe/: Cargo.toml
node-template/pallets/poe/src/: lib.rs  mock.rs
node-template/pallets/primitives/: Cargo.toml
node-template/pallets/template/: Cargo.toml
node-template/runtime/: Cargo.toml
node-template/runtime/src/: constants.rs  contract_extension.rs  lib.rs
rand_extension/: Cargo.toml
