[package]
name = "node-template"
version = "0.1.0"
authors = ["Anonymous"]
description = "A new FRAME-based Substrate node, ready for hacking."
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
structopt = "0.3.8"

sc-cli = { version = "0.8.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68", features = ["wasmtime"] }
sp-core = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sc-executor = { version = "0.8.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68", features = ["wasmtime"] }
sc-service = { version = "0.8.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68", features = ["wasmtime"] }
sc-telemetry = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sc-keystore = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sp-inherents = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sc-transaction-pool = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sp-transaction-pool = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sc-consensus-aura = { version = "0.8.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sp-consensus-aura = { version = "0.8.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sp-consensus = { version = "0.8.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sc-consensus = { version = "0.8.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sc-finality-grandpa = { version = "0.8.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sp-finality-grandpa = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sc-client-api = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sp-runtime = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
pallet-contracts = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "15.1.0"
sc-rpc = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sp-api = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sc-rpc-api = { version = "0.8.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sp-blockchain = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sp-block-builder = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sc-basic-authorship = { version = "0.8.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
substrate-frame-rpc-system = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
pallet-transaction-payment-rpc = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
pallet-contracts-rpc = { version = "0.8.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
frame-benchmarking-cli = { version = "2.0.1", git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }

node-template-runtime = { version = "0.0.1", path = "../runtime" }
#pallet-primitives = { path = "../pallets/primitives" }

[build-dependencies]
substrate-build-script-utils = { version = "2.0.1" }

[features]
default = []
runtime-benchmarks = [
	"node-template-runtime/runtime-benchmarks",
]
