[package]
authors = ["anonymous"]
edition = "2018"
license = "Unlicense"
name = "pallet-poe"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

frame-support = { version = "2.0.1", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
frame-system = { version = "2.0.1", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sp-io = { version = "2.0.1", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sp-runtime = { version = "2.0.1", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sp-core = { version = "2.0.1", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sp-std = { version = "2.0.1", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }

[dev-dependencies]
serde = { version = "1.0.101" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
]
