[package]
authors = ["Anonymous"]
edition = "2018"
name = "pallet-primitives"
version = "0.1.0"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet template for defining custom runtime logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-system = { version = "2.0.1", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sp-application-crypto = { version = "2.0.1", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sp-runtime = { version = "2.0.1", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }
sp-core = { version = "2.0.1", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "26f3d68" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-system/std",
    "sp-application-crypto/std",
    "sp-core/std",
    "sp-runtime/std",
]
